# ArkanoidBlast

./: CMakeLists.txt  CMakePresets.json
Arkanoid/: CMakeLists.txt  constants.h  game.cpp  game.h  interactions.cpp  interactions.h  main.cpp  manager.cpp  manager.h  types.h
Arkanoid/Entities/: background.h  ball.cc  ball.h  brick.cc  brick.h  entity.cc  entity.h  paddle.cc  paddle.h
